Fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,10 @@ body {
   /* scrollbar-gutter: stable; */
 }
 
+body {
+  overflow-y: scroll; /* Always show vertical scroll */
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
   display: none;
@@ -30,8 +34,8 @@ body::-webkit-scrollbar {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 body {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  /* -ms-overflow-style: none; */
+  /* scrollbar-width: none; */
 }
 
 .scrollbar-hide {
